--- a/index.html
+++ b/index.html
@@ -39,21 +39,151 @@
             </nav>
         </HEADER>
         <main>
-            <ul> 
-                <h3>
-                    <ol><i>for amazon press below link</i></ol>
-                </h3>
-                <img src="amazon.jpeg" alt="amazon" style="width:240px;height:180px"
-            <br>
-            </h3>
-           </ul>
-           <ul> 
-            <h3>
-                <ol><i>for flipkart press below link</i></ol>
-            </h3>
-            <img src="flipkart.jpeg" alt="flipkart" style="width:240px;height:180px"
+        <h1 align="center">student1</h1>
+        <img src="s1.jpeg"align="left"alt="pitcher"width="200"height="200">
+    <table align="center">
+        <tr>
+            <td>first name</td>
+            <td>: raju</td>
+        </tr>
         <br>
-        </h3>
+       
+        <tr>
+            <td>email</td>
+            <td><input type="email" id="email" name="name"
+            placeholder="enter you email"></td>
+        </tr>
+        <tr>
+            <td>password</td>
+            <td><input type="password" id="password" name="name"
+            placeholder="enter you password"></td>
+        </tr>
+        <tr>
+            <td>re-enter password</td>
+            <td><input type="password" id="password" name="name"
+            placeholder="enter you re-password"></td>
+        </tr>
+        <tr>
+            <td>date of birth</td>
+            <td><input type="date" id="date" name="DOB">
+        </td>
+        </tr>
+        <tr>
+            <td>mobile number</td>
+            <td><input type="number" id="number" name="number"
+            placeholder="enter youmobile number"></td>
+        </tr>
+        <tr>
+            <td>Gender</td>
+            <td>Male<input type="radio" name="male">
+                female
+                <input type="radio"name="female">
+                others<input type="radio"name="others"></td>
+
+        </tr>
+
+    </table> 
+    <hr>
+    <h1 align="center">student2</h1>
+    <img src="s2.jpeg"align="left"alt="picture"width="200"height="200">
+    <table align="center">
+        <tr>
+            <td>first name</td>
+            <td><input type="text" id="name" name="name"
+            placeholder="enter you first name"></td>
+        </tr>
+        <br>
+        <tr>
+            <td>last name</td>
+            <td><input type="text" id="name" name="name"
+            placeholder="enter you last name"></td>
+        </tr>
+        <tr>
+            <td>email</td>
+            <td><input type="email" id="email" name="name"
+            placeholder="enter you email"></td>
+        </tr>
+        <tr>
+            <td>password</td>
+            <td><input type="password" id="password" name="name"
+            placeholder="enter you password"></td>
+        </tr>
+        <tr>
+            <td>re-enter password</td>
+            <td><input type="password" id="password" name="name"
+            placeholder="enter you re-password"></td>
+        </tr>
+        <tr>
+            <td>date of birth</td>
+            <td><input type="date" id="date" name="DOB">
+        </td>
+        </tr>
+        <tr>
+            <td>mobile number</td>
+            <td><input type="number" id="number" name="number"
+            placeholder="enter youmobile number"></td>
+        </tr>
+        <tr>
+            <td>Gender</td>
+            <td>Male<input type="radio" name="male">
+                female
+                <input type="radio"name="female">
+                others<input type="radio"name="others"></td>
+
+        </tr>
+
+    </table>
+
+  <hr>
+  <h1 align="center">studen3</h1>
+  <img src="s3.jpeg"align="left"alt="center"width="200"height="200">
+  <table align="center">
+      <tr>
+          <td>first name</td>
+          <td><input type="text" id="name" name="name"
+          placeholder="enter you first name"></td>
+      </tr>
+      <br>
+      <tr>
+          <td>last name</td>
+          <td><input type="text" id="name" name="name"
+          placeholder="enter you last name"></td>
+      </tr>
+      <tr>
+          <td>email</td>
+          <td><input type="email" id="email" name="name"
+          placeholder="enter you email"></td>
+      </tr>
+      <tr>
+          <td>password</td>
+          <td><input type="password" id="password" name="name"
+          placeholder="enter you password"></td>
+      </tr>
+      <tr>
+          <td>re-enter password</td>
+          <td><input type="password" id="password" name="name"
+          placeholder="enter you re-password"></td>
+      </tr>
+      <tr>
+          <td>date of birth</td>
+          <td><input type="date" id="date" name="DOB">
+      </td>
+      </tr>
+      <tr>
+          <td>mobile number</td>
+          <td><input type="number" id="number" name="number"
+          placeholder="enter youmobile number"></td>
+      </tr>
+      <tr>
+          <td>Gender</td>
+          <td>Male<input type="radio" name="male">
+              female
+              <input type="radio"name="female">
+              others<input type="radio"name="others"></td>
+
+      </tr>
+
+  </table> 
        </ul>
         </main>
         <footer>
